# logica-fuzzy

./: README.md  carro.csv  main.py  pyproject.toml
