[tool.poetry]
name = "trabalhofuzzy"
version = "0.1.0"
description = ""
authors = ["a-lvaro <aaflneto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
scikit-fuzzy = "^0.4.2"
matplotlib = "^3.8.2"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
